--- a/index.html
+++ b/index.html
@@ -15,6 +15,53 @@
   <div id="accordion"></div>
   <select class="form-control" id="select_area"></select>
   <div class="accordion" id="accordion3">
+  
+      <div class="accordion-group-top">
+      <div class="accordion-heading">
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_1">所沢市ごみ・リサイクル</a>
+      </div>
+      <div id="collapse3_1" class="accordion-body collapse">
+        <div class="accordion-inner">
+          <div id="help">
+            <h1>ごみ・リサイクル</h1><div class="newpara"></div><ul class="norcor">
+            <li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html">家庭ごみの収集日程</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomidashikata/index.html">家庭ごみの分け方・出し方</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomibunbetujiten/index.html">ごみ分別辞典</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomishusekijo/index.html">ごみの収集・集積所</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/mochikomikyotenkaishuu/index.html">施設への持込・拠点回収</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/shittehosikoto/index.html">知っておいてほしいこと</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/recycling/index.html">リサイクル・資源化</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomiteate/index.html">報償金・奨励金</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/jigyoushanominasama/index.html">事業者の皆様</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/ecoro/index.html">リサイクルふれあい館（エコロ）</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/tobucleancenter/index.html">東部クリーンセンター</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/sebucleancenter/index.html">西部クリーンセンター</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gominikansurusesaku/index.html">ごみに関する施策</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/tobucleancenter/tobshi_20120912173957754/index.html">東部クリーンセンターだより一覧</A>
+            </li>
+            </ul><div class="newpara"></div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr>
+
+  
     <div class="accordion-group-top">
       <div class="accordion-heading">
         <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_0">5374.jpについて</a>
