--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
           <div id="help">
             <h1>ごみ・リサイクル</h1><div class="newpara"></div><ul class="norcor">
             <li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html">家庭ごみの収集日程</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html"  style=" color: #FF0000;text-decoration: underline;" target="_blank">家庭ごみの収集日程</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomidashikata/index.html">家庭ごみの分け方・出し方</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html"  style=" color: #FF0000" target="_blank">家庭ごみの収集日程</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomibunbetujiten/index.html">ごみ分別辞典</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomidashikata/index.html"  style=" color: #FF0000;text-decoration: underline;" target="_blank">家庭ごみの分け方・出し方</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomishusekijo/index.html">ごみの収集・集積所</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomibunbetujiten/index.html"  style=" color: #FF0000;text-decoration: underline;" target="_blank">ごみ分別辞典</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/mochikomikyotenkaishuu/index.html">施設への持込・拠点回収</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomishusekijo/index.html"  style=" color: #FF0000;text-decoration: underline;" target="_blank">ごみの収集・集積所</A>
+            </li><li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/mochikomikyotenkaishuu/index.html"  style=" color: #FF0000;text-decoration: underline;" target="_blank">施設への持込・拠点回収</A>
             </li><li>
             <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/shittehosikoto/index.html">知っておいてほしいこと</A>
             </li><li>
