--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="collapse3_1" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h3>ごみ・リサイクル</h3><div class="newpara"></div><ul class="norcor">
+            <h3>ごみ・リサイクル</h3>
             <li>
             <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" target="_blank">家庭ごみの収集日程</A>
             </li><li>
@@ -55,7 +55,7 @@
             </li><li>
             <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/tobucleancenter/tobshi_20120912173957754/index.html" target="_blank">東部クリーンセンターだより一覧</A>
             </li>
-            </ul><div class="newpara"></div>
+            <div class="newpara"></div>
 
           </div>
         </div>
