--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="accordion-inner">
           <div id="help">
             <h3>ごみ・リサイクル</h3>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" target="_blank">家庭ごみの収集日程</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style="color:#ffffff; target="_blank">家庭ごみの収集日程</A>
             <li>
             <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html" target="_blank">家庭ごみの収集日程</A>
             </li><li>
