--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="accordion-inner">
           <div id="help">
             <h3>ごみ・リサイクル</h3>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style="color:#000000; target="_blank">家庭ごみの収集日程</A>
-            <li>
+            <li><A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style="color:#0000FF; target="_blank">家庭ごみの収集日程</A>
+            </li><li>
             <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html" target="_blank">家庭ごみの収集日程</A>
             </li><li>
             <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomidashikata/index.html" target="_blank">家庭ごみの分け方・出し方</A>
