--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="collapse3_1" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h3>A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style="color:#000000; target="_blank">ごみ・リサイクル</A></h3>
+            <h3><A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style="color:#000000; target="_blank">ごみ・リサイクル</A></h3>
             <li>
             <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html" style="color:#0000ff; target="_blank">家庭ごみの収集日程</A>
             </li><li>
