--- a/index.html
+++ b/index.html
@@ -23,35 +23,35 @@
       <div id="collapse3_1" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h3><A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style="color:#000000;" target="_blank">ごみ・リサイクル</A></h3>
+            <h3><A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" target="_blank">ごみ・リサイクル</A></h3>
             <li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html" style="color:#0000ff;" target="_blank">家庭ごみの収集日程</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html" target="_blank">家庭ごみの収集日程</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomidashikata/index.html" style="color:#0000ff;" target="_blank">家庭ごみの分け方・出し方</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomidashikata/index.html" target="_blank">家庭ごみの分け方・出し方</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomibunbetujiten/index.html" style="color:#0000ff;" target="_blank">ごみ分別辞典</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomibunbetujiten/index.html" target="_blank">ごみ分別辞典</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomishusekijo/index.html" style="color:#0000ff;" target="_blank">ごみの収集・集積所</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomishusekijo/index.html" target="_blank">ごみの収集・集積所</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/mochikomikyotenkaishuu/index.html" style="color:#0000ff;" target="_blank">施設への持込・拠点回収</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/mochikomikyotenkaishuu/index.html" target="_blank">施設への持込・拠点回収</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/shittehosikoto/index.html" style="color:#0000ff;" target="_blank">知っておいてほしいこと</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/shittehosikoto/index.html" target="_blank">知っておいてほしいこと</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/recycling/index.html" style="color:#0000ff;" target="_blank">リサイクル・資源化</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/recycling/index.html" target="_blank">リサイクル・資源化</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomiteate/index.html" style="color:#0000ff;" target="_blank">報償金・奨励金</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomiteate/index.html" target="_blank">報償金・奨励金</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/jigyoushanominasama/index.html" style="color:#0000ff;" target="_blank">事業者の皆様</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/jigyoushanominasama/index.html" target="_blank">事業者の皆様</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/ecoro/index.html" style="color:#0000ff;" target="_blank">リサイクルふれあい館（エコロ）</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/ecoro/index.html" target="_blank">リサイクルふれあい館（エコロ）</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/tobucleancenter/index.html" style="color:#0000ff;" target="_blank">東部クリーンセンター</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/tobucleancenter/index.html" target="_blank">東部クリーンセンター</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/sebucleancenter/index.html" style="color:#0000ff;" target="_blank">西部クリーンセンター</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/sebucleancenter/index.html" target="_blank">西部クリーンセンター</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gominikansurusesaku/index.html" style="color:#0000ff;" target="_blank">ごみに関する施策</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gominikansurusesaku/index.html" target="_blank">ごみに関する施策</A>
             </li><li>
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/tobucleancenter/tobshi_20120912173957754/index.html" style="color:#0000ff;" target="_blank">東部クリーンセンターだより一覧</A>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/tobucleancenter/tobshi_20120912173957754/index.html" target="_blank">東部クリーンセンターだより一覧</A>
             </li>
           </div>
         </div>
@@ -67,7 +67,7 @@
         <div class="accordion-inner">
           <div id="help">
             <h4>あ</h4>
-
+            <ul>
               <li>アルミホイール（車両用）</li>
               <p>自動車部品。処理困難物。販売店や処理業者等へ</p>
               <li>石灯籠（いしどうろう）</li>
@@ -90,7 +90,7 @@
               <p>建設廃材。処理業者等へ</p>
               <li>温水器（電気式）</li>
               <p>建設廃材。処理業者等へ</p>
-
+            </ul>
             <h4>か</h4>
             <ul>
               <li>カーポート</li>
