--- a/index.html
+++ b/index.html
@@ -184,9 +184,10 @@
       <div id="collapse3_2" class="accordion-body collapse">
         <div class="accordion-inner">
            <div id="help">
-            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" target="_blank">ごみ・リサイクル</A>
             <ul>
             <li>
+            <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" target="_blank">ごみ・リサイクル</A></li>
+            </li><li>
             <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html" target="_blank">家庭ごみの収集日程</A>
             </li><li>
             <A href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomidashikata/index.html" target="_blank">家庭ごみの分け方・出し方</A>
