--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@ Code for Kanazawaでは、先ずは正しいゴミの捨て方に注目しまし
             <h3>設定</h3>
             <p>お住まいの地域を選択することで、ゴミ収集日が自動的に更新されます。</p>
             <div id="caption">
-              <h4>提供されるゴミ情報について</h4>
-              <p>金沢市が公開しているデータからCfKが独自に解析し、アプリに実装しました。</p>
+              <h4>提供されるゴミ情報について（所沢市版）</h4>
+              <p>所沢市環境クリーン部資源循環推進課発行「家庭の資源とゴミの分け方・出し方（平成26年年度版）」を元にしています。</p>
               <h4>ライセンスについて</h4>
               <p>本アプリの著作権はCode for Kanazawaに帰属します。</p>
             </div>
