--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ Code for Kanazawaでは、先ずは正しいゴミの捨て方に注目しまし
 目的と使い方は、とてもシンプルです。
             <h2>目的</h2>
 「いつ、どのゴミが収集されているのか？」
-例えばお引っ越しをされた場合や、新しく金沢市に住むことになった時、このアプリを使えば、すぐに分かるようにデザインされています。
+例えばお引っ越しをされた場合や、新しく所沢市に住むことになった時、このアプリを使えば、すぐに分かるようにデザインされています。
             <h2>使い方</h2>
             <h3>色でゴミのジャンルを表示</h3>
             <p>一番近いゴミの日とジャンルを上から順に表示しています。</p>
@@ -198,7 +198,7 @@ Code for Kanazawaでは、先ずは正しいゴミの捨て方に注目しまし
             <h3>設定</h3>
             <p>お住まいの地域を選択することで、ゴミ収集日が自動的に更新されます。</p>
             <div id="caption">
-              <h4>提供されるゴミ情報について（所沢市版）</h4>
+              <h4>提供されるゴミ情報について</h4>
               <p>所沢市環境クリーン部資源循環推進課発行「家庭の資源とゴミの分け方・出し方（平成26年年度版）」を元にしています。</p>
               <h4>ライセンスについて</h4>
               <p>本アプリの著作権はCode for Kanazawaに帰属します。</p>
