--- a/index.html
+++ b/index.html
@@ -179,11 +179,12 @@
 
       <div class="accordion-group-top">
       <div class="accordion-heading">
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">収集日変更のお知らせ（平成26年4月1日より）</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">収集日変更のお知らせ</a>
       </div>
       <div id="collapse3_2" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
+          <h4>平成26年4月1日より、下記の地区にて収集日の変更があります。</h4>
             <ul>
               <li>山口1321以降の番地は、山口1〜1320番地の地区の収集日と同じになります。</li>
               <li>北岩岡は、「新聞・雑誌・雑がみ・段ボール」の収集日と「小型家電製品」の収集日が入れ替わります。</li>
