--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <div id="help">
           <h4>平成26年4月1日より、下記の地区にて収集日の変更があります。</h4>
             <ul>
-              <li><b>山口1321以降の番地</b>は、山口1〜1320番地の地区の収集日と同じになります。</li>
+              <li><b>山口1321以降の番地</b>b>は、山口1〜1320番地の地区の収集日と同じになります。</li>
               <li><b>北岩岡</b>は、「新聞・雑誌・雑がみ・段ボール」の収集日と「小型家電製品」の収集日が入れ替わります。</li>
               <li><b>上新井一丁目34・35・36・44番地</b>は、上新井一丁目の収集日と同じになります。</li>
               <li><b>上米金（県道川越線東側）、北所沢町（県道川越線東側）、所沢新町（県道川越線東側）</b>は、県道川越線西側の収集日と同じになり、担当が西部クリーンセンターに変更となります。
@@ -197,6 +197,24 @@
       </div>
     </div>
     <hr> 
+
+       <div class="accordion-group-top">
+      <div class="accordion-heading">
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">所沢市ごみ・リサイクルリンク集</a>
+      </div>
+      <div id="collapse3_3" class="accordion-body collapse">
+        <div class="accordion-inner">
+          <div id="help">
+            <ul>
+              <li><a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html">ごみ・リサイクル</a></li>
+
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr> 
+   
 
     <div class="accordion-group-top">
       <div class="accordion-heading">
