--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="accordion-inner">
           <div id="help">
             <ul>
-              <li><a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html">ごみ・リサイクル</a></li>
+              <li><a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" color: #FF0000;text-decoration: underline;" target=”_blank”>ごみ・リサイクル</a></li>
 
             </ul>
           </div>
