--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
           <div id="help">
             <ul>
               <li><a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" color: #000000;text-decoration: underline;" target=”_blank”>ごみ・リサイクル</a></li>
+              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" color: #000000;text-decoration: underline;" target=”_blank”>ごみ・リサイクル</a><br />
+              <a href="http://www.codeforkanazawa.org/" style=" color: #FF0000;text-decoration: underline;">http://www.codeforkanazawa.org/</a><br />
 
             </ul>
           </div>
