--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <ul>
               <li><a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" color: #000000;text-decoration: underline;" target=”_blank”>ごみ・リサイクル</a></li>
               <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" color: #000000;text-decoration: underline;" target=”_blank”>ごみ・リサイクル</a><br />
-              <a href="http://www.codeforkanazawa.org/" style=" color: #000000;text-decoration: underline;">所沢市</a><br />
+              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style=" color: #000000;text-decoration: underline;">所沢市</a><br />
 
             </ul>
           </div>
