--- a/index.html
+++ b/index.html
@@ -200,11 +200,12 @@
 
        <div class="accordion-group-top">
       <div class="accordion-heading">
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3"><a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>所沢市</a>所沢市ごみ・リサイクルリンク集</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">所沢市ごみ・リサイクルリンク集</a>
       </div>
       <div id="collapse3_3" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
+          <h4><a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>所沢市ごみ・リサイクル</a></h4>
             <ul>
               <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>所沢市</a><br />
 
