--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
        <div class="accordion-group-top">
       <div class="accordion-heading">
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">所沢市ごみ・リサイクルリンク集</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">リンク集</a>
       </div>
       <div id="collapse3_3" class="accordion-body collapse">
         <div class="accordion-inner">
