--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/ecoro/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>リサイクルふれあい館（エコロ）</a><br /> 
               <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/tobucleancenter/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>東部クリーンセンター</a><br />
               <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/sebucleancenter/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>西部クリーンセンター</a><br />  
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gominikansurusesaku/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>東部クリーンセンター</a>ごみに関する施策<br />                               
+              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gominikansurusesaku/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>ごみに関する施策</a><br />                               
             </ul>
           </div>
         </div>
