--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
               <p>家電リサイクル法対象品目。液晶テレビ、プラズマテレビも対象。家電協力店、指定引取場所、処理業者へ。プロジェクションテレビ、リアプロジェクションテレビは家電リサイクル法対象外</p>
               <li>ドア</li>
               <p>建設廃材。処理業者等へ</p>
+              <li>動物死体(大型動物）</li>
+              <p>大型犬などの死体は処理不可。処理可能な大きさに関する問い合わせはクリーンセンターまで</p>
               <li>毒物</li>
               <p>容器も収集しません。処理業者等へ</p>
             </ul>
