--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Code for Kanazawaでは、先ずは正しいゴミの捨て方に注目しまし
             <p>お住まいの地域を選択することで、ゴミ収集日が自動的に更新されます。</p>
             <div id="caption">
               <h4>提供されるゴミ情報について</h4>
-              <p>所沢市環境クリーン部資源循環推進課発行「家庭の資源とゴミの分け方・出し方（平成26年年度版）」を元にしています。</p>
+              <p>所沢市が公開しているオープンデータおよび所沢市環境クリーン部資源循環推進課発行「家庭の資源とゴミの分け方・出し方（平成26年年度版）」を元にしています。</p>
               <h4>ライセンスについて</h4>
               <p>本アプリの著作権はCode for Kanazawaに帰属します。</p>
             </div>
