--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Code for Kanazawaでは、先ずは正しいゴミの捨て方に注目しまし
             <div id="caption">
               <h4>提供されるゴミ情報について</h4>
               <p>所沢市が公開しているオープンデータおよび所沢市環境クリーン部資源循環推進課発行「家庭の資源とゴミの分け方・出し方（平成26年年度版）」を元にしています。</p>
-              <p>所沢市版5374.jp に関するお問い合わせは<a class="nonblock" href="mailto:tokorozawa5374@gmail.com" style=" color: #ff0000;">tokorozawa5374@gmail.com</a>まで</p>
+              <p>所沢市版5374.jp に関するお問い合わせは<a class="nonblock" href="mailto:tokorozawa5374@gmail.com" style=" color: #ff0000; text-decoration: underline;">tokorozawa5374@gmail.com</a>まで</p>
               <h4>ライセンスについて</h4>
               <p>本アプリの著作権はCode for Kanazawaに帰属します。</p>
             </div>
