--- a/index.html
+++ b/index.html
@@ -202,33 +202,20 @@
 
        <div class="accordion-group-top">
       <div class="accordion-heading">
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">リンク集</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">リンク</a>
       </div>
       <div id="collapse3_3" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-          <h4><a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style=" color: #000000;" target=”_blank”>所沢市ごみ・リサイクル</a></h4>
+          <h4><a href="http://www.city.tokorozawa.saitama.jp/" style=" color: #000000;" target=”_blank”>所沢市</a></h4>
             <ul>
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/nittei/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>家庭ごみの収集日程</a><br />
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomidashikata/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>家庭ごみの分け方・出し方</a><br />
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomibunbetujiten/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>ごみ分別辞典</a><br />
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomishusekijo/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>ごみの収集・集積所</a><br />
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/mochikomikyotenkaishuu/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>施設への持込・拠点回収</a><br /> 
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/shittehosikoto/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>知っておいてほしいこと</a><br /> 
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/recycling/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>リサイクル・資源化</a><br />
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gomiteate/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>報償金・奨励金</a><br /> 
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/jigyoushanominasama/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>事業者の皆様</a><br />
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/ecoro/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>リサイクルふれあい館（エコロ）</a><br /> 
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/tobucleancenter/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>東部クリーンセンター</a><br />
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/sebucleancenter/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>西部クリーンセンター</a><br />  
-              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/gominikansurusesaku/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>ごみに関する施策</a><br />                               
+              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>ごみ・リサイクル</a><br />
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <hr> 
-   
+    <hr>    
 
     <div class="accordion-group-top">
       <div class="accordion-heading">
