--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <li><b>山口1321以降の番地</b>は、山口1〜1320番地の地区の収集日と同じになります。</li>
               <li><b>北岩岡</b>は、「新聞・雑誌・雑がみ・段ボール」の収集日と「小型家電製品」の収集日が入れ替わります。</li>
               <li><b>上新井一丁目34・35・36・44番地</b>は、上新井一丁目の収集日と同じになります。</li>
-              <li><b>上米金（県道川越線東側）、北所沢町（県道川越線東側）、所沢新町（県道川越線東側）</b>は、県道川越線西側の収集日と同じになり、担当が西部クリーンセンターに変更となります。
+              <li><b>神米金（県道川越線東側）、北所沢町（県道川越線東側）、所沢新町（県道川越線東側）</b>は、県道川越線西側の収集日と同じになり、担当が西部クリーンセンターに変更となります。
 </li>
             </ul>
           </div>
