--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Code for Kanazawaでは、先ずは正しいゴミの捨て方に注目しまし
               <p>所沢市版5374.jp に関するお問い合わせは<br />
               <a class="nonblock" href="mailto:tokorozawa5374@gmail.com" style=" color: #ff0000; text-decoration: underline;">tokorozawa5374@gmail.com</a><br />
               またはTwitterアカウント<br />
-              <a class="nonblock" href="https://twitter.com/tokorozawa5374" style=" color: #ff0000; text-decoration: underline;">@tokorozawa5374</a>まで</p>
+              <a class="nonblock" href="https://twitter.com/tokorozawa5374" style=" color: #ff0000; text-decoration: underline;" target=”_blank”>@tokorozawa5374</a>まで</p>
               <h4>ライセンスについて</h4>
               <p>本アプリの著作権はCode for Kanazawaに帰属します。</p>
             </div>
