--- a/index.html
+++ b/index.html
@@ -181,18 +181,16 @@
 
       <div class="accordion-group-top">
       <div class="accordion-heading">
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">収集日変更のお知らせ</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">年末年始と１月のごみ出しについて</a>
       </div>
       <div id="collapse3_2" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-          <h4>平成26年4月1日より、下記の地区にて収集日の変更があります。</h4>
+          <h4>年末：12月30日（金）まで収集日程通り</h4>
+          <h4>年始：1月4日（水）から収集日程通り</h4>
+          <h4>平成２８年度より、１月の収集日程を１月４日から第１週と数えるため、カレンダーの見方が１月のみ変更となります。</h4>
             <ul>
-              <li><b>山口1321以降の番地</b>は、山口1〜1320番地の地区の収集日と同じになります。</li>
-              <li><b>北岩岡</b>は、「新聞・雑誌・雑がみ・段ボール」の収集日と「小型家電製品」の収集日が入れ替わります。</li>
-              <li><b>上新井一丁目34・35・36・44番地</b>は、上新井一丁目の収集日と同じになります。</li>
-              <li><b>神米金（県道川越線東側）、北所沢町（県道川越線東側）、所沢新町（県道川越線東側）</b>は、県道川越線西側の収集日と同じになり、担当が西部クリーンセンターに変更となります。
-</li>
+              <li><b>1月1日（日曜日）から1日3日（火曜日）は収集日に数えず、1月4日（水曜日）からの1週間を第1週と数えます。例えば、「1月の第2火曜日」が収集日なら、10日ではなく17日になります。</li>
             </ul>
           </div>
         </div>
