--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
           <h4>年始：1月4日（水）から</h4>
           <h4>平成２８年度より、１月の収集日程を１月４日から第１週と数えるため、カレンダーの見方が１月のみ変更となります。</h4>
             <ul>
-              <li><li>1月1日（日曜日）から1日3日（火曜日）は収集日に数えず、1月4日（水曜日）からの1週間を第1週と数えます。例えば、「1月の第2火曜日」が収集日なら、10日ではなく17日になります。</li>
+              <li>1月1日（日曜日）から1日3日（火曜日）は収集日に数えず、1月4日（水曜日）からの1週間を第1週と数えます。例えば、「1月の第2火曜日」が収集日なら、10日ではなく17日になります。</li>
+              <li>表示の問題: ”第◯月曜日”および”第◯火曜日”の◯の数字の変更に対応できていません。</li>
+              <li>例えば”第2月曜日 2017/1/9”は、正しくは”第1月曜日 2017/1/9”です。正しく表示されている”日後”および日付で収集日を確認してください。</li>
             </ul>
           </div>
         </div>
