--- a/index.html
+++ b/index.html
@@ -181,13 +181,11 @@
 
       <div class="accordion-group-top">
       <div class="accordion-heading">
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">年末年始と１月のごみ出し</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">１月のごみ出し</a>
       </div>
       <div id="collapse3_2" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-          <h4>年末：12月30日（金）まで</h4>
-          <h4>年始：1月4日（水）から</h4>
           <h4>平成２８年度より、１月の収集日程を１月４日から第１週と数えるため、カレンダーの見方が１月のみ変更となります。</h4>
             <ul>
               <li>1月1日（日曜日）から1日3日（火曜日）は収集日に数えず、1月4日（水曜日）からの1週間を第1週と数えます。例えば、「1月の第2火曜日」が収集日なら、10日ではなく17日になります。</li>
