2018年1月ごみ出し

--- a/index.html
+++ b/index.html
@@ -178,7 +178,45 @@
       </div>
     </div>
     <hr>
-
+-
+ -      <div class="accordion-group-top">
+ -      <div class="accordion-heading">
+ -        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">１月のごみ出し</a>
+ -      </div>
+ -      <div id="collapse3_2" class="accordion-body collapse">
+ -        <div class="accordion-inner">
+ -          <div id="help">
+ -          <h4>1月の収集日程</h4>
+ -            <ul>
+ -              <li>1月1日（月曜日）から1日3日（水曜日）は収集日に数えず、1月4日（木曜日）からの1週間を第1週と数えます。</li>
+ -              <li><b>表示の問題(20161227):</b></li>
+ -              <li>”第◯月曜日”および”第◯火曜日”の◯の数字の変更に対応できていません。</li>
+ -              <li>例えば”第2月曜日 2018/1/8”は、正しくは”第1月曜日 2018/1/8”です。正しく表示されている”日後”および日付で収集日を確認してください。</li>
+ -            </ul>
+ -          </div>
+ -        </div>
+ -      </div>
+ -    </div>
+ -    <hr> 
+ -    
+ -       <div class="accordion-group-top">
+ -      <div class="accordion-heading">
+ -        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">リンク</a>
+ -      </div>
+ -      <div id="collapse3_3" class="accordion-body collapse">
+ -        <div class="accordion-inner">
+ -          <div id="help">
+ -          <h4><a href="http://www.city.tokorozawa.saitama.jp/" style=" color: #000000;" target=”_blank”>所沢市</a></h4>
+ -            <ul>
+ -              <a href="http://www.city.tokorozawa.saitama.jp/kurashi/gomi/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>ごみ・リサイクル</a><br />
+ -            </ul>
+ -          </div>
+ -        </div>
+ -      </div>
+ -    </div>
+ -    <hr>    
+ +    <hr>
+    
     <div class="accordion-group-top">
       <div class="accordion-heading">
         <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_0">5374.jpについて</a>
