--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
        <div class="accordion-group-top">
        <div class="accordion-heading">
-         <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">1月のごみ出しについて（令和元年度）</a>
+         <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">1月のごみ出し（令和元年度）</a>
        </div>
        <div id="collapse3_2" class="accordion-body collapse">
          <div class="accordion-inner">
