--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
            <div id="help">
            <h4>1月の収集日程</h4>
              <ul>
-               <li>1月1日（水曜日）から1日3日（金曜日）は収集日に数えず、1月4日（木曜日）からの1週間を第1週と数えます。</li>
+               <li>1月1日（水曜日）から1日3日（金曜日）は収集日に数えず、1月6日（月曜日）からの1週間を第1週と数えます。</li>
                <li><b>表示の問題(20200101):</b></li>
                <li>”第◯月曜日”および”第◯火曜日”の◯の数字の変更に対応できていません。</li>
                <li>例えば”第2月曜日 2020/1/6”は、正しくは”第1月曜日 2020/1/6”です。正しく表示されている”日後”および日付で収集日を確認してください。</li>
