--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       </div>
     </div>
     <hr>
-<!--
+
        <div class="accordion-group-top">
        <div class="accordion-heading">
          <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_2">１月のごみ出し</a>
@@ -188,17 +188,17 @@
            <div id="help">
            <h4>1月の収集日程</h4>
              <ul>
-               <li>1月1日（水曜日）から1日3日（金曜日）は収集日に数えず、1月6日（月曜日）からの1週間を第1週と数えます。</li>
+               <li>年末のごみ収集…12月29日（火曜日）まで、年始のごみ収集…1月4日（月曜日）からになります。1日1日（金曜日）は収集日に数えず、1月4日（月曜日）からの1週間を第1週と数えます。</li>
                <li><b>表示の問題(20201231):</b></li>
                <li>”第◯月曜日”および”第◯火曜日”の◯の数字の変更に対応できていません。</li>
-               <li>例えば”第2月曜日 2020/1/6”は、正しくは”第1月曜日 2020/1/6”です。正しく表示されている”日後”および日付で収集日を確認してください。</li>
+               <li>例えば”第2月曜日 2021/1/4”は、正しくは”第1月曜日 2021/1/4”です。正しく表示されている”日後”および日付で収集日を確認してください。</li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <hr> 
--->     
+     
         <div class="accordion-group-top">
        <div class="accordion-heading">
          <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">リンク</a>
